# auto-publish-rustfmt-syntax

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  rust-src.patch
src/: main.rs
