[package]
name = "rustc-publisher"
version = "0.1.0"
authors = ["topecongiro <seuchida@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.9"
env_logger = "0.7"
log = "0.4"
structopt = "0.3"
toml = "0.5"
walkdir = "2"
